--- a/WebContent/cms/main/about.html
+++ b/WebContent/cms/main/about.html
@@ -1,3 +1,9 @@
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+</head>
+
+<body>
 <div style="padding:10px;">
 <table class="dir">
  <tr>
@@ -50,3 +56,5 @@ FreeType support</td>
 .dir th{background-color:#E2E2E2;}
 .dir td{border-right:#E2E2E2 solid 1px;border-bottom:#E2E2E2 solid 1px;vertical-align: top; padding:2px;}
 </style>
+</body>
+</html>
