--- a/WebContent/cms/main/friendlink/add.html
+++ b/WebContent/cms/main/friendlink/add.html
@@ -1,3 +1,9 @@
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+</head>
+
+<body>
 <script type="text/javascript">
 //页面依赖性强，不建议移动
 $(pageInit);
@@ -60,3 +66,6 @@ method="post">
     </div>
     
 </form>
+
+</body>
+</html>
