--- a/WebContent/cms/main/index_narrow.html
+++ b/WebContent/cms/main/index_narrow.html
@@ -11,7 +11,7 @@
 </head>
 <body style="margin-top:0px; margin-bottom:0px; padding:0px; ">
 	<div class="easyui-layout" id="main_layout" style="width:1000px;height:350px;margin-left:auto; margin-right:auto;">
-		<div data-options="region:'north'" style="height:50px">买买茶游戏后台管理系统</div>
+		<div data-options="region:'north'" style="height:50px">自然卷私人影院后台管理系统</div>
 		<div data-options="region:'south',split:true,border:true" style="height:50px;">版权所有</div>
 		<div data-options="region:'west',split:true" title="系统导航" style="width:200px;"></div>
 		<div data-options="region:'center',title:'Main Title',iconCls:'icon-ok'">
