--- a/WebContent/cms/main/lives/livesadd.html
+++ b/WebContent/cms/main/lives/livesadd.html
@@ -1,3 +1,9 @@
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+</head>
+
+<body>
 <div class="division">
 <form class="tableform" id="livesaddform" action="" method="post" >
         <table width="100%" cellspacing="0" cellpadding="0" border="0" class="shopping_setting">
@@ -30,3 +36,5 @@
         </table>
 </form>
 </div>
+</body>
+</html>
