--- a/WebContent/cms/main/movies/moviesManage.html
+++ b/WebContent/cms/main/movies/moviesManage.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>  
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+</head>
 
+<body>
 <div class="pagecontent">
     <table id="datagrid_moviesManage">
     </table>    
@@ -132,4 +137,5 @@
 
 </div>
 
-
+</body>
+</html>
