--- a/WebContent/cms/main/qun.html
+++ b/WebContent/cms/main/qun.html
@@ -1,4 +1,9 @@
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+</head>
 
+<body>
 <ul>
 	<li>70168958(jQueryEasyUI500人超级群)</li>
 	<li>142872541</li>
@@ -9,3 +14,5 @@
 	<li>112044258</li>
 	<li>49354249</li>
 </ul>
+</body>
+</html>
