--- a/WebContent/cms/main/trailers/trailersManage.html
+++ b/WebContent/cms/main/trailers/trailersManage.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>  
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+</head>
 
+<body>
 <div class="pagecontent">
     <table id="datagrid_trailersManage">
     </table>    
@@ -119,4 +124,5 @@
 
 </div>
 
-
+</body>
+</html>
