--- a/WebContent/cms/main/bug.html
+++ b/WebContent/cms/main/bug.html
@@ -1,3 +1,9 @@
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+</head>
+
+<body>
 <div style="padding:10px;">
 <div style="margin-bottom:8px;">您的意见会让系统做得更好<br /></div>
 <form id="bug_form" method="post" enctype="application/x-www-form-urlencoded">
@@ -22,3 +28,5 @@ $('#bug_form').form({
 	}  
 });   
 </script>
+</body>
+</html>
