--- a/WebContent/cms/main/count.html
+++ b/WebContent/cms/main/count.html
@@ -1,3 +1,9 @@
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+</head>
+
+<body>
 <div style="padding:10px;">
 <table class="dir">
  <tr>
@@ -42,3 +48,5 @@
  </tr>
 </table>
 </div>
+</body>
+</html>
