--- a/WebContent/cms/main/gonggao.html
+++ b/WebContent/cms/main/gonggao.html
@@ -1,3 +1,9 @@
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+</head>
+
+<body>
 <ul class="gonggao">
 <li><span>[2013-02-04]</span><a href="#" target="_blank">春节期间物流、客服公告</a></li>
 <li><span>[2013-02-04]</span><a href="#" target="_blank">开年大促不打烊</a></li>
@@ -10,3 +16,5 @@
 <li><span>[2013-02-04]</span><a href="#" target="_blank">喝茶能够改善记忆力</a></li>
 <li><span>[2013-02-04]</span><a href="#" target="_blank">龙生普洱品牌专场给你百分温暖</a></li>
 </ul>
+</body>
+</html>
