--- a/WebContent/cms/main/lives/livesManage.html
+++ b/WebContent/cms/main/lives/livesManage.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>  
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+</head>
 
+<body>
 <div class="pagecontent">
     <table id="datagrid_livesManage">
     </table>    
@@ -76,3 +81,5 @@
     </script>
 
 </div>
+</body>
+</html>
