--- a/WebContent/cms/main/pictures/piclist.html
+++ b/WebContent/cms/main/pictures/piclist.html
@@ -1,3 +1,9 @@
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+</head>
+
+<body>
 <table id="datagrid_picstab0" toolbar="#tbs" class="datagrid">
     <thead>
         <tr>
@@ -122,3 +128,5 @@ $(function(){
 	});
 })
 </script>
+</body>
+</html>
