--- a/WebContent/cms/main/portal.html
+++ b/WebContent/cms/main/portal.html
@@ -1,4 +1,9 @@
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+</head>
 
+<body>
 <div id="layout_portal_portals" style="height:100%">
 
 	
@@ -7,3 +12,5 @@
 	</div>
 
 </div>
+</body>
+</html>
