--- a/WebContent/cms/main/sys_info.html
+++ b/WebContent/cms/main/sys_info.html
@@ -1,3 +1,9 @@
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+</head>
+
+<body>
 <div style="padding:10px;">
 <table class="dir">
  <tr>
@@ -43,3 +49,5 @@ FreeType support</td>
  </tr>
 </table>
 </div>
+</body>
+</html>
