--- a/WebContent/cms/main/trailers/importtrailers.html
+++ b/WebContent/cms/main/trailers/importtrailers.html
@@ -1,3 +1,9 @@
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+</head>
+
+<body>
 <div class="division">
 <form class="tableform" id="trailersimportmoviesform" action="" method="post" >
         <table width="100%" cellspacing="0" cellpadding="0" border="0" class="shopping_setting">
@@ -23,3 +29,5 @@
 	});*/
 </script>
 </div>
+</body>
+</html>
