--- a/WebContent/cms/main/users/userManage.html
+++ b/WebContent/cms/main/users/userManage.html
@@ -1,4 +1,10 @@
 <!DOCTYPE html>
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+</head>
+
+<body>
 <div class="pagecontent"  >
     <table id="datagrid_userManage">
     </table>
@@ -127,3 +133,5 @@
     </script>
 
 </div><!--pagecontent-->
+</body>
+</html>
