--- a/WebContent/cms/main/login.html
+++ b/WebContent/cms/main/login.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="../themes/default/easyui.css">
 	<link rel="stylesheet" type="text/css" href="../themes/icon.css">
 	<script type="text/javascript" src="../jquery-1.8.0.min.js"></script>
+	
 	<script type="text/javascript" src="../jquery.easyui.min.js"></script>
 	<script>
 	//该页面功能相对独立，尽量单独使用
@@ -39,7 +40,7 @@
 			<p><em>用户名</em><input type="text"></p>
 			<p><em>密码</em><input type="password"></p>
 			<div style="padding:5px;text-align:center;">
-				<a href="#" onclick="$('#login_form').submit();return false" class="easyui-linkbutton" icon="icon-ok">登录</a>
+				<a href="#" onkeypress="$('#login_form').submit();return false" onclick="$('#login_form').submit();return false" class="easyui-linkbutton" icon="icon-ok">登录</a>
 				<a href="#" onclick="$('#login_form')[0].reset()" class="easyui-linkbutton" icon="icon-cancel">重填</a>
 			</div>
 		</form>
