--- a/WebContent/cms/main/messages/messagesedit.html
+++ b/WebContent/cms/main/messages/messagesedit.html
@@ -6,7 +6,7 @@
 <body>
 <div class="division">
 <form class="tableform" id="messageseditform" action="" method="post">
-        <table width="100%" cellspacing="0" cellpadding="0" border="0" class="shopping_setting">
+        <table width="100%" cellspacing="0" cellpadding="0" border="0" class="shopping_setting"  style="color:#000;">
             <tbody>
             <tr>
                     <th>
