--- a/WebContent/cms/main/sender/add.html
+++ b/WebContent/cms/main/sender/add.html
@@ -1,6 +1,6 @@
 <div class="division">
 <form class="tableform" id="messagesaddform" action="" method="post">
-        <table width="100%" cellspacing="0" cellpadding="0" border="0" class="shopping_setting">
+        <table width="100%" cellspacing="0" cellpadding="0" border="0" class="shopping_setting"  style="color:#000;">
             <tbody>
                 <tr>
                     <th>
