--- a/WebContent/cms/main/lives/livesManage.html
+++ b/WebContent/cms/main/lives/livesManage.html
@@ -24,6 +24,7 @@
     			showFooter:true,
     			height:height-50,
     			animate:true,
+    			pagination:false,//分页控件
     			columns:[[	
     				{field:'checkbox',checkbox:true},
         			{field:'id',title:"liveID",width:100},
