--- a/WebContent/cms/main/users/userManage.html
+++ b/WebContent/cms/main/users/userManage.html
@@ -23,6 +23,7 @@
     			showFooter:true,
     			height:height-50,
     			animate:true,
+    			pagination:false,//分页控件
     			columns:[[	
     				{field:'checkbox',checkbox:true},
         			{field:'id',sortable:true,title:"用户ID",width:100},
