--- a/WebContent/cms/main/trailers/trailersManage.html
+++ b/WebContent/cms/main/trailers/trailersManage.html
@@ -26,6 +26,7 @@
     			showFooter:true,
     			height:height-50,
     			animate:true,
+    			pagination:false,//分页控件
     			columns:[[	
     				{field:'checkbox',checkbox:true},
         			{field:'id',title:"预告片ID",width:100},
