--- a/WebContent/cms/main/movies/moviesSearch.html
+++ b/WebContent/cms/main/movies/moviesSearch.html
@@ -27,7 +27,7 @@
     			showFooter:true,
     			height:height-50,
     			animate:true,
-    			pagination:false,//分页控件
+    			pagination:true,//分页控件
     			columns:[[	
     				{field:'checkbox',checkbox:true},
         			{field:'id',title:"电影ID",width:100},
@@ -134,21 +134,22 @@
 				'-'
     			],
 			});	
-           //设置分页控件 
-            var p = $('#list_data').datagrid('getPager'); 
-            $(p).pagination({ 
-                pageSize: 10,//每页显示的记录条数，默认为10 
-                pageList: [5,10,15],//可以设置每页记录条数的列表 
-                beforePageText: '第',//页数文本框前显示的汉字 
-                afterPageText: '页    共 {pages} 页', 
-                displayMsg: '当前显示 {from} - {to} 条记录   共 {total} 条记录', 
-                onBeforeRefresh:function(){
-                    $(this).pagination('loading');
-                    alert('before refresh');
-                    $(this).pagination('loaded');
-                }
-            });  
-		});		
+           
+		});	
+      //设置分页控件 
+        var p = $('#list_data').datagrid('getPager'); 
+        $(p).pagination({ 
+            pageSize: 10,//每页显示的记录条数，默认为10 
+            pageList: [5,10,15],//可以设置每页记录条数的列表 
+            beforePageText: '第',//页数文本框前显示的汉字 
+            afterPageText: '页    共 {pages} 页', 
+            displayMsg: '当前显示 {from} - {to} 条记录   共 {total} 条记录', 
+            /*onBeforeRefresh:function(){
+                $(this).pagination('loading');
+                alert('before refresh');
+                $(this).pagination('loaded');
+            }*/ 
+        }); 
     </script>
 
 </div>
